2008-01-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (Usage): Revise wording for the help message.
	Use string catenation instead of separate printf's.

2008-01-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* README: Write document.
	* src/swath.1: Rewrite the whole page, with more detailed info.

2008-01-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/Makefile.am: Install dict in ${pkgdatadir}, not ${datadir}.
	* src/Makefile.am: Update dict location macro acoordingly.

2006-07-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.{h,cpp} (IsLeadChar(), IsLastChar()),
	src/filterhtml.cpp (GetNextToken()),
	src/filterlatex.cpp (GetNextToken()),
	src/filterrtf.cpp (GetNextToken()): Fixed char signedness portability
	issues (found on s390, powerpc, arm builds by debian buildd).

2006-03-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, NEWS:
	=== Version 0.3.1 ===

2006-03-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/swath.1: Used section number instead of version number.

2006-03-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* Makefile.am: Removed debian from SUBDIRS.

	* configure.in: Removed debian/Makefile generation.

2005-10-09  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* configure.in:
	Formatted configure options help strings with AC_HELP_STRING().
	Used --disable/--enable help style rather than --enable with default
	yes or no. Also disabled debug by default.

2005-05-07  Chanop Silpa-Anan <chanop@debian.org>
	* src/abswordseg.cpp:
	A quick hack for Apple/Darwin: malloc is defined in stdlib.h instead
	of a more common place malloc.h.

2004-03-30  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* AUTHORS:
	Fix my e-mail address.

2003-04-04  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* conv/tis620.cxx, conv/utf8.cxx:
	Use casting instead of declaring temp vars in dealing with
	iostream::get() with unsigned char argument.
